<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="default_app_name">@string/app_name</string>
    <string name="error_loading_page"><![CDATA[Could not retrieve data!<br>Please try again later!]]></string>
    <string name="fragment_page_bundle_key">fragment_page</string>
    <string name="app_cms_binder_key">app_cms_binder</string>
    <string name="app_cms_video_player_binder_key">app_cms_video_player_binder</string>
    <string name="app_cms_video_player_bundle_binder_key">app_cms_video_player_bundle_binder</string>
    <string name="app_cms_download_setting_bundle_key">app_cms_download_setting_bundle_key</string>
    <string name="app_cms_download_setting_binder_key">app_cms_download_setting_binder_key</string>
    <string name="something_wrong">Something went wrong. Please try again!</string>
    <string name="app_cms_bundle_key">app_cms_bundle</string>
    <string name="app_cms_selected_season_key">selected_season</string>
    <string name="launch_binder_key">launch_binder</string>
    <string name="video_player_data_key">video_player_data</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="page_id">initial_url</string>
    <string name="close_self_key">close_self</string>
    <string name="app_cms_binder_stack_size_key">app_cms_binder_stack_size</string>
    <string name="app_cms_binder_stack_element_key">app_cms_binder_stack_%1$d</string>
    <string name="navigation_item_key">navigation_item</string>
    <string name="menu_navigation_key">menu_navigation</string>
    <string name="ellipse_char">&#8230;</string>
    <string name="min_abbreviation">MIN</string>
    <string name="sec_abbreviation">SEC</string>
    <string name="secs_abbreviation">SECS</string>
    <string name="mins_abbreviation">&#160;MINS</string>
    <plurals name="mins_plural">
        <item quantity="one">%d MIN</item>
        <item quantity="other">%d MINS</item>
    </plurals>
    <string name="_mins_abbreviation">%d MINS</string>
    <string name="text_separator">&#160;|&#160;</string>
    <string name="blank_separator">&#160;</string>
    <string name="color_hash_prefix">#</string>
    <string name="string_with_ellipse">%1$s&#8230;</string>
    <string name="string_with_ellipse_and_more">%1$s&#8230; MORE</string>
    <string name="text_with_color"><![CDATA[<font color=\'#%1$s\'>%2$s</font>]]></string>
    <string name="video_player_hls_url_key">video_player_hls_url</string>
    <string name="video_layer_film_id_key">film_id</string>
    <string name="video_player_ads_url_key">video_player_ads_url</string>
    <string name="video_player_recommended_videos_key">video_player_recommended_videos_key</string>
    <string name="video_fragment_tag_key">video_fragment</string>
    <string name="app_cms_text_color_key">app_cms_text_color</string>
    <string name="app_cms_bg_color_key">app_cms_bg_color</string>
    <string name="app_cms_on_action_internal_events_key">app_cms_on_action_internal_events</string>
    <string name="resume_internal_events_key">resume_internal_events</string>
    <string name="send_to">Share Video</string>
    <string name="done">DONE</string>
    <string name="preview_ended">Preview ended</string>
    <string name="player_video_playing_on_pause_key">player_video_playing_on_pause</string>
    <string name="app_cms_network_connectivity_error_title">Network Connectivity</string>
    <string name="app_cms_network_connectivity_error_message">Please connect your device to a network and try again.</string>
    <string name="app_cms_network_connectivity_error_message_download">Please connect your device to a network and try again, or click OK for go to My Downloads.</string>
    <string name="app_cms_signout_error_msg">Are you sure you want to log out?</string>
    <string name="app_cms_signin_error_title">Sign In</string>
    <string name="app_cms_signout_error_title">Sign Out</string>
    <string name="app_cms_signup_error_title">Sign Up</string>
    <string name="app_cms_reset_password_title">Reset Password</string>
    <string name="app_cms_forgot_password_title">Forgot Password</string>
    <string name="app_cms_reset_password_success_description">Follow the instructions in the email we just sent you to reset your password.</string>
    <string name="st_privacy_policy_icon_key">icon-privacy-policy</string>
    <string name="start_watching">Start Watching</string>
    <string name="app_cms_cancel_subscription_ask_for_confirmation_message">Are you sure you wish to cancel your subscription?</string>
    <string name="app_cms_data_error_title">Could Not Access Data</string>
    <string name="app_cms_data_error_message">Data is currently unavailable.  Please try again later.</string>
    <string name="app_cms_close_alert_dialog_button_text">CLOSE</string>
    <string name="text_plain_mime_type">text/plain</string>
    <string name="app_cms_ok_alert_dialog_button_text">OK</string>
    <string name="age_rating_g">G</string>
    <string name="age_rating_y">Y</string>
    <string name="age_rating_y7">Y7</string>
    <string name="age_rating_ua">UA</string>
    <string name="age_rating_pg">PG</string>
    <string name="age_rating_fourteen">14</string>
    <string name="age_raging_r">R</string>
    <string name="age_rating_converted_g">0+</string>
    <string name="age_rating_converted_y">2+</string>
    <string name="age_rating_converted_y7">7+</string>
    <string name="age_rating_converted_ua">12+</string>
    <string name="age_rating_converted_pg">13+</string>
    <string name="age_rating_converted_fourteen">14+</string>
    <string name="age_rating_converted_eighteen">18+</string>
    <string name="age_rating_converted_default">NR</string>
    <string name="no_results">No Results</string>
    <string name="video_player_title_key">video_player_title</string>
    <string name="video_player_permalink_key">video_player_permalink</string>
    <string name="video_player_font_color_key">video_player_font_color</string>
    <string name="video_player_closed_caption_key">video_player_closed_caption</string>
    <string name="video_player_watched_time_key">video_player_watched_time</string>
    <string name="video_player_run_time_key">video_player_run_time</string>
    <string name="video_player_is_trailer_key">isTrailer</string>
    <string name="video_primary_category_key">video_primary_category</string>
    <string name="opensans_bold_ttf">fonts/OpenSans-Bold.ttf</string>
    <string name="opensans_semibold_ttf">fonts/OpenSans-Semibold.ttf</string>
    <string name="opensans_extrabold_ttf">fonts/OpenSans-ExtraBold.ttf</string>
    <string name="opensans_regular_ttf">fonts/OpenSans-Regular.ttf</string>
    <string name="unsubscribe_text_with_login">To continue watching, and access so much more, login below!</string>
    <string name="font_bold_ttf">fonts/%1$s-Bold.ttf</string>
    <string name="font_italic_ttf">fonts/%1$s-Italic.ttf</string>
    <string name="font_semibold_ttf">fonts/%1$s-Semibold.ttf</string>
    <string name="font_semibold_italic_ttf">fonts/%1$s-SemiboldItalic.ttf</string>
    <string name="font_bold_italic_ttf">fonts/%1$s-BoldItalic.ttf</string>
    <string name="font_black_ttf">fonts/%1$s-Black.ttf</string>
    <string name="font_black_italic_ttf">fonts/%1$s-BlackItalic.ttf</string>
    <string name="font_light_ttf">fonts/%1$s-Light.ttf</string>
    <string name="font_light_italic_ttf">fonts/%1$s-LightItalic.ttf</string>
    <string name="font_hairline_ttf">fonts/%1$s-Hairline.ttf</string>
    <string name="font_hairline_italic_ttf">fonts/%1$s-HairlineItalic.ttf</string>
    <string name="font_heavy_ttf">fonts/%1$s-Heavy.ttf</string>
    <string name="font_heavy_italic_ttf">fonts/%1$s-HeavyItalic.ttf</string>
    <string name="font_medium_ttf">fonts/%1$s-Medium.ttf</string>
    <string name="font_medium_italic_ttf">fonts/%1$s-MediumItalic.ttf</string>
    <string name="font_thin_ttf">fonts/%1$s-Thin.ttf</string>
    <string name="font_thin_italic_ttf">fonts/%1$s-ThinItalic.ttf</string>
    <string name="font_extrabold_ttf">fonts/%1$s-ExtraBold.ttf</string>
    <string name="font_regular_ttf">fonts/%1$s-Regular.ttf</string>
    <string name="helvaticaneu_bold">fonts/HelveticaNeu-Bold.ttf</string>
    <string name="helvaticaneu_italic">fonts/HelveticaNeu-Italic.ttf</string>
    <string name="lato_regular">fonts/Lato-Regular.ttf</string>
    <string name="lato_medium">fonts/Lato-Medium.ttf</string>
    <string name="lato_light">fonts/Lato-Light.ttf</string>
    <string name="lato_bold">fonts/Lato-Bold.ttf</string>
    <string name="search_button_text">GO</string>
    <string name="bg_color_key">bg_color</string>
    <string name="button_color_key">button_color</string>
    <string name="text_color_key">text_color</string>
    <string name="utf8enc">UTF-8</string>
    <string name="https_scheme">https://</string>
    <string name="video_player_request_ads_key">video_player_request_ads</string>
    <string name="dialog_item_key">dialog_item</string>
    <string name="dialog_item_title_key">title</string>
    <string name="dialog_item_description_key">description</string>
    <string name="dialog_item_text_color_key">text_color</string>
    <string name="app_cms_username_input_text_hint">Name</string>
    <string name="app_cms_email_input_text_hint">Email</string>
    <string name="please_input_your_email_address_to_send_a_reset_password_link_text">Please input your email address to send a reset password link.</string>
    <string name="edit_profile_confirm_change_button_text">Update</string>
    <string name="empty_history_list_message">Your history is currently empty.</string>
    <string name="empty_watchlist_message">Your watchlist is currently empty.</string>
    <string name="empty_download_video_message">You haven’t downloaded anything yet.</string>
    <string name="empty_download_audio_message">You haven’t downloaded anything yet.</string>
    <string name="app_cms_currently_logged_out_message">CURRENTLY LOGGED OUT</string>
    <string name="app_cms_sign_out_label">SIGN OUT</string>
    <string name="next_video_is">Next Video is:</string>
    <string name="app_cms_user_agent">AppCMS Android</string>
    <string name="app_cms_default_video_ext">m3u8</string>
    <string name="app_cms_login_again">Your session has expired.  Please login again.</string>
    <string name="app_cms_error_user_already_exists">A user with that email already exists.</string>
    <string name="app_cms_error_email_password">Email and password are not valid.</string>
    <string name="app_cms_edit_settings_button_text">EDIT</string>
    <string name="app_cms_account_name_title_text">Name:</string>
    <string name="app_cms_account_title_text">ACCOUNT</string>
    <string name="app_cms_account_email_title_text">Email:</string>
    <string name="app_cms_settings_page_title_text">Settings</string>
    <string name="app_cms_edit_profile_dialog_title">Edit Profile</string>
    <string name="app_cms_update_username_dialog_title">Update Username</string>
    <string name="app_cms_update_email_dialog_title">Update Email</string>
    <string name="add_to_watchlist_content_type_video">video</string>
    <string name="reset_password_text">RESET PASSWORD</string>
    <string name="app_cms_change_password_page_title">Change Password</string>
    <string name="app_cms_old_password_input_text_hint">Old Password</string>
    <string name="app_cms_new_password_input_text_hint">New Password</string>
    <string name="app_cms_confirm_password_input_text_hint">Confirm Password</string>
    <string name="app_cms_confirm_password_button_text">Change Password</string>
    <string name="content_rating_back">Back</string>
    <string name="content_rating_text_warning">WARNING</string>
    <string name="content_rating_viewer_discretion">Viewer Discretion Is Advised</string>
    <string name="content_rating_description">The following content is rated: &#160;</string>
</resources>