<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_cms_reset_password_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/app_cms_reset_password_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_cms_toolbar_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_cms_reset_password_title"
        android:textSize="@dimen/app_cms_settings_page_title_textsize"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/app_cms_reset_password_email_input_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_cms_reset_password_page_title"
        android:layout_centerHorizontal="true"
        android:hint="@string/app_cms_email_input_text_hint"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/app_cms_reset_password_email_input"
            android:layout_width="@dimen/app_cms_search_bar_width"
            android:layout_height="@dimen/app_cms_text_input_height"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/app_cms_text_input_margin"
            android:background="@android:color/white"
            android:hint="Email"
            android:textColorHint="@color/colorNavBarText"
            android:cursorVisible="true"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/app_cms_reset_password_text_input_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_cms_reset_password_email_input_container"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/close_button_margin"
        android:text="@string/please_input_your_email_address_to_send_a_reset_password_link_text" />

    <Button
        android:id="@+id/app_cms_submit_reset_password_button"
        android:layout_width="@dimen/app_cms_search_bar_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_cms_reset_password_text_input_description"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:text="@string/reset_password_text" />
</RelativeLayout>