<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/app_cms_settings_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:textSize="@dimen/app_cms_settings_page_title_textsize"
        android:text="@string/app_cms_settings_page_title_text"
        android:textStyle="bold"/>
    <ImageButton
        android:id="@+id/app_cms_close_button"
        android:layout_width="@dimen/close_button_size"
        android:layout_height="@dimen/close_button_size"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/close_button_margin"
        android:src="@drawable/cancel" />
    <View
        android:id="@+id/app_cms_settings_separator_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_cms_separator_view_height"
        android:layout_below="@id/app_cms_close_button"
        android:alpha="0.6"/>
    <TextView
        android:id="@+id/app_cms_account_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_cms_account_title_text"
        android:textSize="@dimen/app_cms_account_title_textsize"
        android:padding="@dimen/app_cms_account_padding"
        android:layout_below="@id/app_cms_settings_separator_view"/>
    <View
        android:id="@+id/app_cms_account_title_separator_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_cms_separator_view_height"
        android:layout_below="@id/app_cms_account_title"
        android:alpha="0.6"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:padding="8dp"
        android:layout_below="@id/app_cms_account_title_separator_view">
        <TextView
            android:id="@+id/app_cms_account_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_cms_account_name_title_text"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:id="@+id/app_cms_account_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/app_cms_edit_account_name_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_cms_edit_settings_button_text"
            android:layout_gravity="end"
            android:background="@android:color/transparent"/>
        <TextView
            android:id="@+id/app_cms_account_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_cms_account_email_title_text"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:id="@+id/app_cms_account_email_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/app_cms_edit_account_email_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_cms_edit_settings_button_text"
            android:layout_gravity="end"
            android:background="@android:color/transparent"/>
    </GridLayout>

</RelativeLayout>