<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_cms_change_password_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.viewlift.views.fragments.AppCMSChangePasswordFragment">

    <TextView
        android:id="@+id/app_cms_change_password_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_cms_toolbar_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_cms_change_password_page_title"
        android:textSize="@dimen/app_cms_settings_page_title_textsize"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/app_cms_old_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_cms_change_password_page_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:hint=" "
        tools:hintEnabled="false"
        tools:ignore="HardcodedText">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/app_cms_old_password_text_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_cms_text_input_height"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/app_cms_text_input_margin"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/app_cms_old_password_input_text_hint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/app_cms_new_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_cms_old_password_container"
        android:layout_centerHorizontal="true"
        android:hint=" "
        tools:hintEnabled="false"
        tools:ignore="HardcodedText">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/app_cms_new_password_text_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_cms_text_input_height"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/app_cms_text_input_margin"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/app_cms_new_password_input_text_hint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/app_cms_confirm_password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_cms_new_password_container"
        android:layout_centerHorizontal="true"
        android:hint=" "
        tools:hintEnabled="false"
        tools:ignore="HardcodedText">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/app_cms_confirm_password_text_input"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_cms_text_input_height"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/app_cms_text_input_margin"
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/app_cms_confirm_password_input_text_hint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/app_cms_change_password_button"
        android:layout_width="@dimen/app_cms_search_bar_width"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_cms_confirm_password_container"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:text="@string/app_cms_confirm_password_button_text" />

</RelativeLayout>
