<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_cms_content_rating_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <TextView
        android:id="@+id/app_cms_content_rating_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/app_cms_content_rating_view_margin"
        android:text="@string/content_rating_back"
        android:textSize="14sp"
        />

    <View
        android:id="@+id/app_cms_content_rating_back_underline"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_below="@+id/app_cms_content_rating_back"
        android:layout_alignEnd="@id/app_cms_content_rating_back"
        android:layout_alignStart="@id/app_cms_content_rating_back"
        android:text="@string/content_rating_back"
        />

    <!--suppress DeprecatedClassUsageInspection -->
    <android.support.percent.PercentRelativeLayout
        android:id="@+id/app_cms_content_rating_animation_container"
        app:layout_widthPercent="@fraction/mainContainerWidthPercent"
        app:layout_heightPercent="@fraction/mainContainerHeightPercent"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/app_cms_content_rating_header_view"
            android:layout_width="wrap_content"
            app:layout_heightPercent="25%"
            android:layout_centerHorizontal="true"
            android:text="@string/content_rating_text_warning"
            android:textColor="@android:color/white"
            android:gravity="top"
            android:textSize="18sp"
            android:visibility="visible" />


        <LinearLayout
            android:id="@+id/app_cms_content_rating_info_container"
            android:layout_width="match_parent"
            app:layout_heightPercent="55%"
            android:layout_below="@+id/app_cms_content_rating_header_view"
            android:background="@drawable/border_rectangular"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/app_cms_content_rating_title_header"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".6"
                android:visibility="visible"
                android:text="@string/content_rating_description"
                android:gravity="end|center_vertical"
                android:textSize="@dimen/app_cms_content_rating_title_header_text_size"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/app_cms_content_rating_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".4"
                android:visibility="visible"
                android:gravity="left|center_vertical"
                android:layout_marginLeft="10dp"
                android:textSize="@dimen/app_cms_content_rating_title_text_size"
                android:textColor="@android:color/white"/>



        </LinearLayout>


        <TextView
            android:id="@+id/app_cms_content_rating_viewer_discretion"
            android:layout_width="wrap_content"
            app:layout_heightPercent="20%"
            android:layout_below="@+id/app_cms_content_rating_info_container"
            android:gravity="bottom"
            android:layout_centerHorizontal="true"
            android:text="@string/content_rating_viewer_discretion"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="visible"
            android:textColor="@android:color/white"
            />

    </android.support.percent.PercentRelativeLayout>

    <ProgressBar
        android:id="@+id/app_cms_content_rating_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_marginBottomPercent="@fraction/app_cms_content_rating_progress_bar_margin_bottom_percent"
        android:layout_marginStart="@dimen/app_cms_content_rating_view_margin"
        android:layout_marginEnd="@dimen/app_cms_content_rating_view_margin"
        android:indeterminate="false"
        android:max="10000" />

</android.support.percent.PercentRelativeLayout>